--- a/mesa/visualization/templates/modular_template_simple_version.html
+++ b/mesa/visualization/templates/modular_template_simple_version.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>Real use case</title>
+	<title>Toy example</title>
     <link href="/static/external/bootstrap-5.1.3-dist/css/bootstrap.min.css" type="text/css" rel="stylesheet" />
     <link href="/static/external/bootstrap-slider-11.0.2/dist/css/bootstrap-slider.min.css" type="text/css" rel="stylesheet" />
     <link href="/static/css/visualization.css" type="text/css" rel="stylesheet" />
@@ -100,7 +100,7 @@
     <script>
         var port = {{ port }};
     </script>
-    <script src="/static/js/runcontrol.js"></script>
+    <script src="/static/js/runcontrol_simple_version.js"></script>
 
     <!-- Element-specific scripts go here -->
     <script>
