--- a/mesa/visualization/templates/modular_template.html
+++ b/mesa/visualization/templates/modular_template.html
@@ -50,7 +50,7 @@
     <div class="container d-flex flex-row">
         <div class="col-xl-4 col-lg-4 col-md-4 col-3" id="sidebar">
 	    <div>
-                <input type="text" id="save-input" style="display: inline-block; margin-right: 5px; height: 40px; padding: 6px 12px; font-size: 14px;" placeholder="Enter file name">
+                <input type="text" id="save-input" style="display: inline-block; margin-right: 5px; width: 220px; height: 40px; padding: 6px 12px; font-size: 14px;" placeholder="Enter file name">
                 <button type="button" id="save-button" style="background-color: #4CAF50; color: white; border: none; padding: 6px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 14px; height: 40px; cursor: pointer; border-radius: 4px;">Save</button>
             </div>
 	</div>
